[package]
name = "oidc"
version = "0.1.0"
license = "Apache-2.0"
description = "OpenID Connect client library using Reqwest, Biscuit, and inth-oauth2"
readme = "README.md"
authors = ["Zanny <lordzanny@gmail.com>"]
categories = ["web-programming", "authentication"]
keywords = ["authentication", "client", "openid", "openid_connect", "web"]
documentation = "https://docs.rs/crate/oidc/0.1.0"
repository = "https://gitlab.com/zanny/oidc-reqwest"

[dependencies]
base64              = "0.10"
biscuit             = "0.1"
chrono              = "0.4"
inth-oauth2         = "0.16"
reqwest             = { version = "0.9", features = ["hyper-011"] }
serde               = "1"
serde_derive        = "1"
serde_json          = "1"
url_serde           = "0.2"
validator           = "0.8"
validator_derive    = "0.8"
