[package]
name = "oidc"
version = "0.3.0"
authors = ["Zanny <lordzanny@gmail.com>"]
categories = ["web-programming", "authentication"]
description = "OpenID Connect client library using Reqwest, Biscuit, and inth-oauth2"
documentation = "https://docs.rs/crate/oidc"
edition = "2018"
keywords = ["authentication", "client", "openid", "openid_connect", "web"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kilork/oidc-reqwest"

[dependencies]
base64              = "0.11"
biscuit             = "0.4"
chrono              = "0.4"
failure             = "0.1"
inth-oauth2         = { git = "https://github.com/kilork/inth-oauth2" }
reqwest             = { version = "0.10", features = ["json", "blocking"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
url                 = { version = "2", features = ["serde"] }
validator           = "0.10"
validator_derive    = "0.10"
